ProdIND/ProdPrograms/force-app/main/default/objects/City_State_Master__c/City_State_Master__c.object-meta.xml
<CustomObject>
    <label>City State Master</label>
    <nameField>
        <label>City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>City State Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>