ProdIND/ProdPrograms/force-app/main/default/objects/City_State_Master__c/fields/Carwale_Id__c.field-meta.xml
<CustomField>
    <fullName>Carwale_Id__c</fullName>
    <label>Carwale Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>