ProdIND/ProdPrograms/force-app/main/default/objects/City_State_Master__c/fields/City_Code__c.field-meta.xml
<CustomField>
    <fullName>City_Code__c</fullName>
    <externalId>true</externalId>
    <label>City_Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>