ProdIND/ProdPrograms/force-app/main/default/objects/City_State_Master__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State</label>
    <referenceTo>Geo_State_Masters__c</referenceTo>
    <relationshipName>City_State_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>