ProdIND/ProdPrograms/force-app/main/default/objects/City_State_Master__c/recordTypes/Geo_Cities.recordType-meta.xml
<RecordType>
    <fullName>Geo_Cities</fullName>
    <active>true</active>
    <description>These are the Cities which are Geo location</description>
    <label>Geo Cities</label>
</RecordType>