ProdIND/ProdPrograms/force-app/main/default/objects/City_State_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>City_Code__c</columns>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Carwale_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Carwale_Id__c</field>
        <operation>equals</operation>
        <value>399,569</value>
    </filters>
    <label>All</label>
</ListView>